# TestFromUnigine

./: README.md
Test1/: CMakeLists.txt  diranalyzer.cpp  diranalyzer.h  dirinfoanalyzer.cpp  dirinfoanalyzer.h  dirinfocollector.cpp  dirinfocollector.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp
Test1/DirInfo/: CMakeLists.txt  dirinfoanalyzer.cpp  dirinfocollector.cpp  dirinfocollector.h
Test1/Unit-test/: CMakeLists.txt  dirinfotest.cpp  dirinfotest.h  main.cpp
